--- a/packages/console/app/src/routes/zen/index.css
+++ b/packages/console/app/src/routes/zen/index.css
@@ -1,10 +1,15 @@
+::selection {
+  background: #FDFFCA;
+}
+
 [data-page="zen"] {
+  --color-background: hsl(24, 100%, 99%);
   --color-text: hsl(224, 10%, 10%);
   --color-text-secondary: hsl(224, 7%, 46%);
   --color-text-dimmed: hsl(224, 6%, 63%);
   --color-text-inverted: hsl(0, 0%, 100%);
 
-  --color-border: hsl(224, 6%, 77%);
+  --color-border: hsl(44, 13%, 90%);
 }
 
 [data-page="zen"] {
@@ -19,14 +24,14 @@
 }
 
 [data-page="zen"] {
-  --padding: 3rem;
+  background: var(--color-background);
+  --padding: 5rem;
   --vertical-padding: 1.5rem;
   --heading-font-size: 1.375rem;
 
-  @media (max-width: 30rem) {
-    --padding: 1rem;
-    --vertical-padding: 0.75rem;
-    --heading-font-size: 1rem;
+  @media (max-width: 60rem) {
+    --padding: 1.5rem;
+    --vertical-padding: 3rem;
   }
 
   display: flex;
@@ -34,7 +39,7 @@
   flex-direction: column;
   font-family: var(--font-mono);
   color: var(--color-text);
-  padding: calc(var(--padding) + 1rem);
+  padding-bottom: 5rem;
 
   a {
     color: var(--color-text);
@@ -47,17 +52,24 @@
     max-width: 67.5rem;
     margin: 0 auto;
     border: 1px solid var(--color-border);
+    border-top: none;
   }
 
   [data-component="top"] {
     padding: 16px var(--padding);
-    position: relative;
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: var(--color-background);
+    border-bottom: 1px solid var(--color-border);
+
+    z-index: 10;
+
 
     img {
-      height: 40px;
+      height: 28px;
       width: auto;
     }
 
@@ -94,41 +106,15 @@
       }
     }
 
-    [data-slot="title"] {
-      line-height: 1.25;
-      font-weight: 500;
-      text-align: center;
-      font-size: var(--heading-font-size);
-      color: var(--color-text-secondary);
-      text-transform: uppercase;
-    }
 
-    [data-slot="login"] {
-      position: absolute;
-      top: 0;
-      right: 0;
-      border-width: 0 0 1px 1px;
-      border-style: solid;
-      border-color: var(--color-border);
-      background-color: var(--color-bg);
-
-      @media (max-width: 30rem) {
-        display: none;
-      }
-
-      a {
-        display: block;
-        padding: 0.5rem 1rem calc(0.5rem + 4px);
-      }
-    }
   }
 
 
 
   [data-component="hero"] {
-    border-top: 1px solid var(--color-border);
     display: flex;
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
+
 
   }
 
@@ -153,18 +139,21 @@
       }
 
       p {
+        color: var(--color-text-secondary);
         margin-bottom: 24px;
         max-width: 82%;
       }
 
       button {
         background: var(--color-text);
-        padding: 4px 20px;
+        padding: 8px 20px;
         color: var(--color-text-inverted);
         border-radius: 4px;
         font-weight: 500;
         cursor: pointer;
         margin-bottom: 32px;
+        display: flex;
+        gap: 12px;
       }
 
     }
@@ -184,33 +173,10 @@
 
       p:first-child {
         margin-bottom: 24px;
+        color: var(--color-text-secondary);
       }
     }
 
-
-
-
-    [data-slot="right"] {
-      flex: 1;
-      padding: var(--vertical-padding) 1rem;
-    }
-
-    @media (max-width: 50rem) {
-      flex-direction: column;
-
-      [data-slot="right"] {
-        border-left: none;
-        border-top: 1px solid var(--color-border);
-      }
-    }
-
-
-
-
-    [data-slot="highlight"] {
-      color: var(--color-text);
-      font-weight: 500;
-    }
   }
 
   [data-component="comparison"] {
@@ -236,13 +202,15 @@
 
     p {
       margin-bottom: 12px;
+      color: var(--color-text-secondary);
     }
   }
 
 
   [data-component="problem"] {
     border-top: 1px solid var(--color-border);
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
+    color: var(--color-text-secondary);
 
     p {
       margin-bottom: 24px;
@@ -252,7 +220,9 @@
       padding: 0;
       li {
         list-style: none;
-        margin-bottom: 8px;
+        margin-bottom: 16px;
+        display: flex;
+        gap: 12px;
 
         span {
           color: var(--color-text-dimmed);
@@ -266,13 +236,16 @@
 
   [data-component="how"] {
     border-top: 1px solid var(--color-border);
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
+    color: var(--color-text-secondary);
 
     ul {
       padding: 0;
       li {
         list-style: none;
         margin-bottom: 8px;
+        display: flex;
+        gap: 12px;
 
         span {
           color: var(--color-text-dimmed);
@@ -290,7 +263,8 @@
 
   [data-component="privacy"] {
     border-top: 1px solid var(--color-border);
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
+    color: var(--color-text-secondary);
 
     [data-slot="privacy-title"] {
 
@@ -317,7 +291,8 @@
 
   [data-component="email"] {
     border-top: 1px solid var(--color-border);
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
+    color: var(--color-text-secondary);
 
     [data-slot="form"] {
       position: relative;
@@ -350,7 +325,7 @@
 
   [data-component="faq"] {
     border-top: 1px solid var(--color-border);
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
 
     ul {
       padding: 0;
@@ -375,7 +350,7 @@
 
   [data-component="testimonials"] {
     border-top: 1px solid var(--color-border);
-    padding: var(--padding);
+    padding: var(--vertical-padding) var(--padding);
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -401,12 +376,13 @@
           width: 24px;
           border-radius: 24px;
         }
+
       }
 
       [data-slot="quote"] {
         margin-left: 40px;
         span {
-          color: var(--color-text-dimmed);
+          color: var(--color-text-secondary);
           text-decoration: none;
         }
       }
