--- a/packages/console/app/src/routes/index.css
+++ b/packages/console/app/src/routes/index.css
@@ -535,6 +535,8 @@
   }
 
   [data-component="video"] {
+    border-top: 1px solid var(--color-border-weak);
+
     video {
       width: 100%;
       height: auto;
