--- a/packages/console/app/src/routes/zen/index.css
+++ b/packages/console/app/src/routes/zen/index.css
@@ -266,7 +266,7 @@
 
 
     p {
-      color: var(--color-text-secondary);
+      color: var(--color-text);
       margin-bottom: 24px;
       max-width: 82%;
 
@@ -330,6 +330,8 @@
   }
 
   [data-component="comparison"] {
+    border-top: 1px solid var(--color-border-weak);
+
     video {
       width: 100%;
       height: auto;
@@ -358,7 +360,7 @@
   [data-component="problem"] {
     border-top: 1px solid var(--color-border-weak);
     padding: var(--vertical-padding) var(--padding);
-    color: var(--color-text-secondary);
+    color: var(--color-text);
 
     p {
       margin-bottom: 24px;
@@ -385,7 +387,7 @@
   [data-component="how"] {
     border-top: 1px solid var(--color-border-weak);
     padding: var(--vertical-padding) var(--padding);
-    color: var(--color-text-secondary);
+    color: var(--color-text);
 
     ul {
       padding: 0;
@@ -412,7 +414,7 @@
   [data-component="privacy"] {
     border-top: 1px solid var(--color-border-weak);
     padding: var(--vertical-padding) var(--padding);
-    color: var(--color-text-secondary);
+    color: var(--color-text);
 
     [data-slot="privacy-title"] {
       h3 {
